get all followers, followings
