# pkg/protobuf/userservice/gw/user.swagger.json
@@ -141,6 +141,30 @@
     "userserviceFollowUserResponse": {
       "type": "object"
     },
+    "userserviceGetAllFollowersResponse": {
+      "type": "object",
+      "properties": {
+        "followers": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/userserviceUser"
+          }
+        }
+      }
+    },
+    "userserviceGetAllFollowingsResponse": {
+      "type": "object",
+      "properties": {
+        "followings": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/userserviceUser"
+          }
+        }
+      }
+    },
     "userserviceGetUserByIDResponse": {
       "type": "object",
       "properties": {
